--- a/templates/requestSubmitted.ejs
+++ b/templates/requestSubmitted.ejs
@@ -23,7 +23,7 @@
 </html>
 
 <script>
-	let myPort = "<%- port %>";
-	document.querySelector("#homeLink").href = "http://localhost:" + myPort + "/";
+	const baseURL = window.location.origin;
+	document.querySelector("#homeLink").href = baseURL + "/";
 	document.querySelector("#dateTime").innerHTML = (new Date()).toLocaleString('en-US',{timeZone: 'America/New_York'});
 </script>
