--- a/templates/subsheetForm.ejs
+++ b/templates/subsheetForm.ejs
@@ -32,9 +32,9 @@
 </html>
 
 <script>
-	let myPort = "<%- port %>";
-	document.querySelector("#appForm").action = "http://localhost:" + myPort + "/processSubsheetForm";
-	document.querySelector("#homeLink").href = "http://localhost:" + myPort + "/";
+	const baseURL = window.location.origin;
+	document.querySelector("#appForm").action = baseURL + "/processSubsheetForm";
+	document.querySelector("#homeLink").href = baseURL + "/";
 	window.onsubmit = () => confirm(`Are you sure you want to submit your request?
 
 You will not be able to change your information once submitted.`);
