Subleave Form Fix

--- a/templates/subsheetForm.ejs
+++ b/templates/subsheetForm.ejs
@@ -15,7 +15,7 @@
 			  <!-- <option value="apple">Apple</option> -->
 			  <%- driverSelection %>
 			</select><br><br>
-			<label for="holesSelected"><strong>Select any Subsheet Holes that you would like to sign up for:</strong></label><br>
+			<strong>Select any Subsheet Holes that you would like to sign up for:</strong><br>
 			<!-- <input type="checkbox" id="option1" name="holesSelected" value="option1"> -->
 			<%- checkboxFields %>
 		</fieldset>
