--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -6,26 +6,54 @@
 	<title>Shuttle-UM Subleave</title>
 </head>
 
-<body>
-	<h1>Shuttle-UM Subleave</h1>
+<body class="center">
+	<h1> <img src="UMDGlobe.gif" type="image/png"> Shuttle-UM Subleave</h1>
 
 	<h2>Driver</h2>
-	<ul>
-		<li>To view available shifts, select <a href="/subsheetShifts">View Available Shifts</a></li>
-		<li>To sign up for shifts, select <a href="/subsheetForm">Subsheet Holes Pickup</a></li>
-	</ul>
+	<p>
+		To view available shifts, select <a href="/subsheetShifts">View Available Shifts</a><br>
+		To sign up for shifts, select <a href="/subsheetForm">Subsheet Holes Pickup</a>
+	</p>
 	<hr>
 
 	<h2>Admin</h2>
-	<ul>
-		<li>To add a driver, select  <a href="/addDriver">Add Driver</a></li>
-		<li>To a add shift to the schedule, select <a href="/addShift">Add Shift</a></li>
+	<p>
+		To add a driver, select  <a href="/addDriver">Add Driver</a><br>
+		To a add shift to the schedule, select <a href="/addShift">Add Shift</a>
+	</p>
 		<!-- <li>To remove a driver, select  <a href="/removeDriver">Remove Driver</a></li> -->
 		<!-- <li>To remove a shift from the schedule, select <a href="/removeShift">Remove Shift</a></li> -->
 		<!-- <li>To add shifts to the schedule with a csv file, select <a href="/addShiftscsv">Bulk Add Shifts</a></li> -->
-	</ul>
+
 	<hr>
 	
 </body>
 
 </html>
+
+<style>
+	body {
+		background-color: whitesmoke;
+	}
+	h1   {
+		color: rgb(255, 0, 0);
+		display: inline-block;
+	}
+	img {
+		width: 100px;
+    	vertical-align: middle;
+	}
+	
+	.center {
+		text-align: center;
+		border: 3px solid black;
+		
+	}
+	ul {
+		display: table;
+		margin: 0 auto;
+	}
+	p{
+		color: rgb(36, 36, 36);
+	}
+</style>
