--- a/templates/subsheetForm.ejs
+++ b/templates/subsheetForm.ejs
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<h1>Subsheets Sign-Ups</h1>
+	<h1><a id="homeLink"><img src="UMDGlobe.gif" type="image/png"></a>Subsheets Sign-Ups</h1>
 	<form id="appForm" method="post">
 		<fieldset>
 			<label for="driverSelect"><strong>Name / Driver Number:</strong></label>
@@ -27,8 +27,6 @@
 
 
 <hr>
-<a id="homeLink">HOME</a>
-
 </html>
 
 <script>
@@ -39,3 +37,19 @@
 
 You will not be able to change your information once submitted.`);
 </script>
+
+
+<style>
+	body {
+		background-color: whitesmoke;
+		color: rgb(88, 88, 88);
+		text-align: center;
+	}
+	h1   {
+		color: rgb(255, 0, 0);
+	}
+	img {
+		width: 100px;
+    	vertical-align: middle;
+	}
+</style>
