--- a/templates/addDriver.ejs
+++ b/templates/addDriver.ejs
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<h1>Add Driver to Subleave</h1>
+	<h1> <a id="homeLink"><img src="UMDGlobe.gif" type="image/png"></a>Add Driver to Subleave</h1>
 	<form id="appForm" method="post">
 		<fieldset>
 			<label><strong>Name:</strong> <input type="text" name="name" required></label><br><br>
@@ -25,7 +25,7 @@
 
 
 <hr>
-<a id="homeLink">HOME</a>
+
 
 </html>
 
@@ -34,3 +34,21 @@
 	document.querySelector("#appForm").action = baseURL + "/processAddDriver";
 	document.querySelector("#homeLink").href = baseURL + "/";
 </script>
+
+
+<style>
+	body {
+		background-color: whitesmoke;
+		color: rgb(88, 88, 88);
+		text-align: center;
+	}
+	h1   {
+		color: rgb(255, 0, 0);
+	}
+	img {
+		width: 100px;
+    	vertical-align: middle;
+	}
+	
+	
+</style>
