--- a/templates/requestSubmitted.ejs
+++ b/templates/requestSubmitted.ejs
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<h1>Request Submitted</h1>
+	<h1><a id="homeLink"><img src="UMDGlobe.gif" type="image/png"></a>Request Submitted</h1>
 	<div>
 		
 		You will receive an email confirmation soon. Please let your manager know if you have any questions.
@@ -17,8 +17,7 @@
 	<strong>Task completed on <span id="dateTime"></span></strong>
 	<hr>
 </body>
-
-<a id="homeLink">HOME</a>
+Click on the UMD globe to go home.
 
 </html>
 
@@ -27,3 +26,19 @@
 	document.querySelector("#homeLink").href = baseURL + "/";
 	document.querySelector("#dateTime").innerHTML = (new Date()).toLocaleString('en-US',{timeZone: 'America/New_York'});
 </script>
+
+
+<style>
+	body {
+		background-color: whitesmoke;
+		color: rgb(88, 88, 88);
+		text-align: center;
+	}
+	h1   {
+		color: rgb(255, 0, 0);
+	}
+	img {
+		width: 100px;
+    	vertical-align: middle;
+	}
+</style>
