--- a/templates/shiftsTable.ejs
+++ b/templates/shiftsTable.ejs
@@ -7,13 +7,13 @@
 </head>
 
 <body>
-	<h1>Shifts Available to be Picked Up</h1>
+	<h1><a id="homeLink"><img src="UMDGlobe.gif" type="image/png"></a>Shifts Available to be Picked Up</h1>
 	<div><%- myTable %></div>
 </body>
 
 
 <hr>
-<a id="homeLink">HOME</a>
+
 
 </html>
 
@@ -21,3 +21,18 @@
 	const baseURL = window.location.origin;
 	document.querySelector("#homeLink").href = baseURL + "/";
 </script>
+
+<style>
+	body {
+		background-color: whitesmoke;
+		color: rgb(88, 88, 88);
+		text-align: center;
+	}
+	h1   {
+		color: rgb(255, 0, 0);
+	}
+	img {
+		width: 100px;
+    	vertical-align: middle;
+	}
+</style>
