--- a/templates/singleAddedConfirmation.ejs
+++ b/templates/singleAddedConfirmation.ejs
@@ -7,14 +7,13 @@
 </head>
 
 <body>
-	<h1>Add <%- item %> Request Result:</h1>
+	<h1><a id="homeLink"><img src="UMDGlobe.gif" type="image/png"></a>Add <%- item %> Request Result:</h1>
 	<div>
 	<p> <%- result %> </p>
 		
 	</div>
 </body>
 <br>
-<a id="homeLink">HOME</a>
 
 </html>
 
@@ -22,3 +21,17 @@
 	const baseURL = window.location.origin;
 	document.querySelector("#homeLink").href = baseURL + "/";
 </script>
+<style>
+	body {
+		background-color: whitesmoke;
+		color: rgb(88, 88, 88);
+		text-align: center;
+	}
+	h1   {
+		color: rgb(255, 0, 0);
+	}
+	img {
+		width: 100px;
+    	vertical-align: middle;
+	}
+</style>
