Fixed Image Loading Issue

--- a/templates/addShift.ejs
+++ b/templates/addShift.ejs
@@ -8,7 +8,7 @@
 
 <body>
 	
-	<h1><a id="homeLink"><img src="UMDGlobe.gif" type="image/png"></a>Add Shift to Subleave</h1>
+	<h1><a id="homeLink"><img src="/UMDGlobe.gif" type="image/png"></a>Add Shift to Subleave</h1>
 	<form id="appForm" method="post">
 		<fieldset>
 			<label><strong>Date:</strong> <input type="date" id="dateInput" name="date" required/></label>
