--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -7,7 +7,7 @@
 </head>
 
 <body class="center">
-	<h1> <img src="UMDGlobe.gif" type="image/png"> Shuttle-UM Subleave</h1>
+	<h1> <img src="/UMDGlobe.gif" type="image/png"> Shuttle-UM Subleave</h1>
 
 	<h2>Driver</h2>
 	<p>
