--- a/templates/requestSubmitted.ejs
+++ b/templates/requestSubmitted.ejs
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<h1><a id="homeLink"><img src="UMDGlobe.gif" type="image/png"></a>Request Submitted</h1>
+	<h1><a id="homeLink"><img src="/UMDGlobe.gif" type="image/png"></a>Request Submitted</h1>
 	<div>
 		
 		You will receive an email confirmation soon. Please let your manager know if you have any questions.
