--- a/templates/addDriver.ejs
+++ b/templates/addDriver.ejs
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<h1> <a id="homeLink"><img src="UMDGlobe.gif" type="image/png"></a>Add Driver to Subleave</h1>
+	<h1> <a id="homeLink"><img src="/UMDGlobe.gif" type="image/png"></a>Add Driver to Subleave</h1>
 	<form id="appForm" method="post">
 		<fieldset>
 			<label><strong>Name:</strong> <input type="text" name="name" required></label><br><br>
