--- a/templates/shiftsTable.ejs
+++ b/templates/shiftsTable.ejs
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<h1><a id="homeLink"><img src="UMDGlobe.gif" type="image/png"></a>Shifts Available to be Picked Up</h1>
+	<h1><a id="homeLink"><img src="/UMDGlobe.gif" type="image/png"></a>Shifts Available to be Picked Up</h1>
 	<div><%- myTable %></div>
 </body>
 
