--- a/templates/singleAddedConfirmation.ejs
+++ b/templates/singleAddedConfirmation.ejs
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<h1><a id="homeLink"><img src="UMDGlobe.gif" type="image/png"></a>Add <%- item %> Request Result:</h1>
+	<h1><a id="homeLink"><img src="/UMDGlobe.gif" type="image/png"></a>Add <%- item %> Request Result:</h1>
 	<div>
 	<p> <%- result %> </p>
 		
