--- a/templates/subsheetForm.ejs
+++ b/templates/subsheetForm.ejs
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<h1><a id="homeLink"><img src="UMDGlobe.gif" type="image/png"></a>Subsheets Sign-Ups</h1>
+	<h1><a id="homeLink"><img src="/UMDGlobe.gif" type="image/png"></a>Subsheets Sign-Ups</h1>
 	<form id="appForm" method="post">
 		<fieldset>
 			<label for="driverSelect"><strong>Name / Driver Number:</strong></label>
