Added a message to direct users back to the home page after form submission.

--- a/templates/requestSubmitted.ejs
+++ b/templates/requestSubmitted.ejs
@@ -11,6 +11,7 @@
 	<div>
 		
 		You will receive an email confirmation soon. Please let your manager know if you have any questions.
+		You may close out this page, or click the globe to return to the home page.
 		
 	</div>
 	<hr>
