--- a/templates/singleAddedConfirmation.ejs
+++ b/templates/singleAddedConfirmation.ejs
@@ -10,7 +10,7 @@
 	<h1><a id="homeLink"><img src="/UMDGlobe.gif" type="image/png"></a>Add <%- item %> Request Result:</h1>
 	<div>
 	<p> <%- result %> </p>
-		
+	You may close out this page, or click the globe to return to the home page.
 	</div>
 </body>
 <br>
