--- a/templates/requestSubmitted.ejs
+++ b/templates/requestSubmitted.ejs
@@ -7,11 +7,11 @@
 </head>
 
 <body>
-	<h1><a id="homeLink"><img src="/UMDGlobe.gif" type="image/png"></a>Request Submitted</h1>
+	<h1><a class="homeLink"><img src="/UMDGlobe.gif" type="image/png"></a>Request Submitted</h1>
 	<div>
 		
 		You will receive an email confirmation soon. Please let your manager know if you have any questions.
-		You may close out this page, or click the globe to return to the home page.
+		You may close out this page or <a class="homeLink">return to the home page. </a>
 		
 	</div>
 	<hr>
@@ -24,7 +24,7 @@ Click on the UMD globe to go home.
 
 <script>
 	const baseURL = window.location.origin;
-	document.querySelector("#homeLink").href = baseURL + "/";
+	document.querySelector(".homeLink").href = baseURL + "/";
 	document.querySelector("#dateTime").innerHTML = (new Date()).toLocaleString('en-US',{timeZone: 'America/New_York'});
 </script>
 
