--- a/templates/singleAddedConfirmation.ejs
+++ b/templates/singleAddedConfirmation.ejs
@@ -7,10 +7,10 @@
 </head>
 
 <body>
-	<h1><a id="homeLink"><img src="/UMDGlobe.gif" type="image/png"></a>Add <%- item %> Request Result:</h1>
+	<h1><a class="homeLink"><img src="/UMDGlobe.gif" type="image/png"></a>Add <%- item %> Request Result:</h1>
 	<div>
 	<p> <%- result %> </p>
-	You may close out this page, or click the globe to return to the home page.
+	You may close out this page or <a class="homeLink">return to the home page. </a>
 	</div>
 </body>
 <br>
@@ -19,7 +19,7 @@
 
 <script>
 	const baseURL = window.location.origin;
-	document.querySelector("#homeLink").href = baseURL + "/";
+	document.querySelector(".homeLink").href = baseURL + "/";
 </script>
 <style>
 	body {
