--- a/templates/singleAddedConfirmation.ejs
+++ b/templates/singleAddedConfirmation.ejs
@@ -7,19 +7,22 @@
 </head>
 
 <body>
-	<h1><a class="homeLink"><img src="/UMDGlobe.gif" type="image/png"></a>Add <%- item %> Request Result:</h1>
+	<h1><a id="homeLink"><img src="/UMDGlobe.gif" type="image/png"></a>Add <%- item %> Request Result:</h1>
 	<div>
 	<p> <%- result %> </p>
-	You may close out this page or <a class="homeLink">return to the home page. </a>
+	
 	</div>
+	<hr>
 </body>
+Click on the UMD globe to go home.
+
 <br>
 
 </html>
 
 <script>
 	const baseURL = window.location.origin;
-	document.querySelector(".homeLink").href = baseURL + "/";
+	document.querySelector("#homeLink").href = baseURL + "/";
 </script>
 <style>
 	body {
