Added Links to Available Shifts Table

--- a/templates/shiftsTable.ejs
+++ b/templates/shiftsTable.ejs
@@ -11,7 +11,7 @@
 	<div><%- myTable %></div>
 <hr>
 </body>
-Click on the UMD globe to go home.
+Click on the UMD globe to go home. <br>
 Click <a id="signupLink">here to sign up for a shift</a>.
 
 
